--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -3,3 +3,4 @@ source "https://rubygems.org"
 gem "jekyll", "~> 3.9"
 gem "webrick", "~> 1.8"
 gem "jekyll-theme-cayman", "~> 0.2"
+gem "kramdown-parser-gfm", "~> 1.1"
