fix: add root index.html for GitHub Pages

--- a/.github/workflows/publish-charts.yml
+++ b/.github/workflows/publish-charts.yml
@@ -58,6 +58,29 @@ jobs:
           cd docs
           bundle exec jekyll build -d ../release/docs
 
+      - name: Add root landing page
+        run: |
+          cat > release/index.html << 'HTMLEOF'
+          <!DOCTYPE html>
+          <html lang="en">
+          <head>
+            <meta charset="utf-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1">
+            <title>DevOps Genie – Charts &amp; Docs</title>
+          </head>
+          <body style="font-family: system-ui, sans-serif; max-width: 640px; margin: 2rem auto; padding: 0 1rem; line-height: 1.6;">
+            <h1>DevOps Genie</h1>
+            <p>Helm charts and documentation for <a href="https://github.com/devopsgenie-ai">devopsgenie-ai</a>.</p>
+            <h2>Documentation</h2>
+            <p><a href="docs/">View the docs</a> (installation, configuration).</p>
+            <h2>Helm repo</h2>
+            <pre style="background: #f4f4f4; padding: 1rem; overflow-x: auto;"><code>helm repo add devopsgenie https://devopsgenie-ai.github.io/devopsgenie-charts/
+helm repo update
+helm search repo devopsgenie</code></pre>
+          </body>
+          </html>
+          HTMLEOF
+
       - name: Setup Pages
         uses: actions/configure-pages@v4
         with:
