--- a/charts/devops-genie/templates/deployment.yaml
+++ b/charts/devops-genie/templates/deployment.yaml
@@ -16,10 +16,7 @@ spec:
         app.kubernetes.io/name: {{ include "devops-genie.name" . }}
         app.kubernetes.io/instance: {{ .Release.Name }}
     spec:
-      {{- with .Values.image.pullSecrets }}
-      imagePullSecrets:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
+      {{- include "devops-genie.imagePullSecrets" . | nindent 6 }}
       serviceAccountName: {{ .Values.serviceAccount.name | default (include "devops-genie.fullname" .) }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
