--- a/.github/workflows/release-devops-genie-sre-agent.yml
+++ b/.github/workflows/release-devops-genie-sre-agent.yml
@@ -1,20 +1,11 @@
-# Release a Helm chart and publish to the repo index (GitHub Pages branch).
-# One repo, multiple charts: charts/ has one dir per chart; gh-pages branch has index.yaml + .tgz files.
-# Manual trigger only. Tag = vX.Y.Z (semantic version only).
-# GitHub Pages: Settings → Pages → Deploy from a branch → gh-pages → / (root).
-name: Release and publish Helm chart
+# Release devops-genie-sre-agent Helm chart only.
+# Like https://github.com/grafana/k8s-monitoring-helm/blob/main/.github/workflows/release-v1.yml
+# Tag = vX.Y.Z (semantic version only from Chart.yaml).
+name: Release devops-genie-sre-agent chart
 
 on:
   workflow_dispatch:
     inputs:
-      chart:
-        description: 'Chart to release'
-        required: true
-        type: choice
-        options:
-          - devops-genie
-          - devops-genie-sre-agent
-        default: devops-genie
       chart_version:
         description: 'Chart version (e.g. 0.1.0). Leave empty to use version from Chart.yaml.'
         required: false
@@ -31,6 +22,9 @@ concurrency:
   group: "gh-pages"
   cancel-in-progress: false
 
+env:
+  CHART: devops-genie-sre-agent
+
 jobs:
   release-and-publish:
     runs-on: ubuntu-latest
@@ -43,7 +37,7 @@ jobs:
       - name: Get chart version and tag
         id: chart-version
         run: |
-          CHART="${{ github.event.inputs.chart }}"
+          CHART="${{ env.CHART }}"
           CHART_PATH="charts/${CHART}"
           if [[ ! -d "$CHART_PATH" ]]; then
             echo "::error::Chart not found: $CHART_PATH"
@@ -132,6 +126,6 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           if ! git diff --staged --quiet; then
-            git commit -m "Publish ${{ steps.chart-version.outputs.chart }}-${{ steps.chart-version.outputs.version }}"
+            git commit -m "Publish ${{ env.CHART }}-${{ steps.chart-version.outputs.version }}"
             git push origin gh-pages
           fi
