update dg sre agent

--- a/charts/devops-genie/values.yaml
+++ b/charts/devops-genie/values.yaml
@@ -56,6 +56,23 @@ resources:
     cpu: 100m
     memory: 256Mi
 
+# Liveness, readiness and startup probes. Override in values to customize; defaults below match current behavior.
+# Set startupProbe to a probe spec (e.g. httpGet /health with failureThreshold) to enable; omit or leave null to disable.
+livenessProbe:
+  httpGet:
+    path: /health
+    port: http
+  initialDelaySeconds: 30
+  periodSeconds: 10
+readinessProbe:
+  httpGet:
+    path: /health
+    port: http
+  initialDelaySeconds: 5
+  periodSeconds: 5
+# startupProbe: unset by default (no startup probe). Set to a probe spec to enable.
+# startupProbe: {}
+
 nodeSelector: {}
 tolerations: []
 affinity: {}
