--- a/.github/workflows/release-devops-genie-sre-agent.yml
+++ b/.github/workflows/release-devops-genie-sre-agent.yml
@@ -1,17 +1,27 @@
 # Release devops-genie-sre-agent Helm chart only.
 # Like https://github.com/grafana/k8s-monitoring-helm/blob/main/.github/workflows/release-v1.yml
-# Tag = vX.Y.Z (semantic version only from Chart.yaml).
+# Tag = <chart>-<version> (chart-specific, like Grafana k8s-monitoring-helm).
 name: Release devops-genie-sre-agent chart
 
 on:
   workflow_dispatch:
     inputs:
+      bump:
+        description: 'Bump version in Chart.yaml (patch/minor/major). Use "none" to keep current version.'
+        required: true
+        type: choice
+        options:
+          - patch
+          - minor
+          - major
+          - none
+        default: patch
       chart_version:
-        description: 'Chart version (e.g. 0.1.0). Leave empty to use version from Chart.yaml.'
+        description: 'Chart version (e.g. 0.1.0). Leave empty to use/bump version from Chart.yaml.'
         required: false
         type: string
       release_name:
-        description: 'Release title (default: v<version>)'
+        description: 'Release title (default: devops-genie-sre-agent-<version>)'
         required: false
         type: string
 
@@ -33,6 +43,28 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Bump version in Chart.yaml
+        if: github.event.inputs.chart_version == '' && github.event.inputs.bump != 'none'
+        run: |
+          CHART="${{ env.CHART }}"
+          CHART_PATH="charts/${CHART}/Chart.yaml"
+          V=$(grep '^version:' "$CHART_PATH" | sed 's/.*version: *//' | tr -d '"\n\r ')
+          IFS='.' read -r major minor patch <<< "$V"
+          case "${{ github.event.inputs.bump }}" in
+            patch) patch=$((patch + 1)) ;;
+            minor) minor=$((minor + 1)); patch=0 ;;
+            major) major=$((major + 1)); minor=0; patch=0 ;;
+            *) exit 1 ;;
+          esac
+          NEXT="${major}.${minor}.${patch}"
+          sed -i "s/^version:.*/version: ${NEXT}/" "$CHART_PATH"
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add "$CHART_PATH"
+          git commit -m "chore(${CHART}): bump version to ${NEXT}"
+          git push origin HEAD:main
 
       - name: Get chart version and tag
         id: chart-version
@@ -49,7 +81,7 @@ jobs:
             V=$(grep '^version:' "$CHART_PATH/Chart.yaml" | sed 's/.*version: *//' | tr -d '"\n\r ')
           fi
           echo "version=$V" >> $GITHUB_OUTPUT
-          echo "tag=v${V}" >> $GITHUB_OUTPUT
+          echo "tag=${CHART}-${V}" >> $GITHUB_OUTPUT
           echo "chart=$CHART" >> $GITHUB_OUTPUT
 
       - name: Helm
@@ -123,6 +155,7 @@ jobs:
         run: |
           cd pages
           git add -A
+          git add -f *.tgz
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           if ! git diff --staged --quiet; then
